@startuml
' 抽象クラスまたはインターフェースの定義
abstract class Entry {
    + id: str
    + content: str
    + creation_date: datetime.date
    + last_modified_date: datetime.date
    --
    + edit_content(newContent: str): void
    + delete(): void
}

' Entryを継承する具体的なエントリタイプ
class Task {
    + is_completed: bool
    + due_date: Optional[datetime.date]
    + priority: Optional[TaskPriority]
    --
    + mark_as_completed(): void
    + set_due_date(date: datetime.date): void
}

class Event {
    + start_datetime: datetime.datetime
    + end_datetime: Optional[datetime.datetime]
    + location: Optional[str]
    --
    + set_time_range(start: datetime.datetime, end: datetime.datetime): void
    + set_location(loc: str): void
}

class Note {
    ' Entryのcontentで十分
}

' コレクションクラス
class Collection {
    + name: str
    + type: CollectionType
    + start_date: Optional[datetime.date]
    + end_date: Optional[datetime.date]
    --
    + add_entry(entry: Entry): void
    + remove_entry(entry: Entry): void
    + get_entries_by_date(date: datetime.date): List<Entry>
}

' バレットジャーナル本体
class BulletJournal {
    + name: str
    + creation_date: datetime.date
    --
    + add_collection(collection: Collection): void
    + remove_collection(collection: Collection): void
}

' タグクラス
class Tag {
    + name: str
    + color: Optional[str]
}

' 列挙型の定義
enum TaskPriority {
    LOW
    MEDIUM
    HIGH
}

enum CollectionType {
    DAILY
    MONTHLY
    CUSTOM
}

' 関係性の定義

' 汎化 (継承)
Entry <|-- Task
Entry <|-- Event
Entry <|-- Note

' 集約/コンポジション (has-a 関係)
BulletJournal "1" *-- "0..*" Collection : contains
Collection "1" *-- "0..*" Entry : contains

' 関連 (多対多)
Entry "0..*" -- "0..*" Tag : tags

@enduml